--- a/ProjectUAS_EzBooking_Client/src/MainForm/FormLogin.form
+++ b/ProjectUAS_EzBooking_Client/src/MainForm/FormLogin.form
@@ -149,6 +149,9 @@
         </Property>
         <Property name="text" type="java.lang.String" value="Register"/>
       </Properties>
+      <Events>
+        <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="lblRegisterMouseClicked"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
