--- a/ProjectUAS_EzBooking_Client/src/Restaurant/FormAddMenu.form
+++ b/ProjectUAS_EzBooking_Client/src/Restaurant/FormAddMenu.form
@@ -44,7 +44,7 @@
                   </Group>
                   <Component id="txtPriceTotal1" max="32767" attributes="0"/>
                   <Component id="jScrollPane1" alignment="0" max="32767" attributes="0"/>
-                  <Component id="txtPriceTotal" alignment="0" max="32767" attributes="0"/>
+                  <Component id="txtNamaMakanan" alignment="0" max="32767" attributes="0"/>
               </Group>
               <EmptySpace pref="18" max="32767" attributes="0"/>
           </Group>
@@ -58,7 +58,7 @@
               <EmptySpace type="separate" max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                  <Component id="txtPriceTotal" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="txtNamaMakanan" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Group type="103" groupAlignment="3" attributes="0">
@@ -137,7 +137,7 @@
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnAddActionPerformed"/>
       </Events>
     </Component>
-    <Component class="javax.swing.JTextField" name="txtPriceTotal">
+    <Component class="javax.swing.JTextField" name="txtNamaMakanan">
       <Properties>
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Tahoma" size="16" style="0"/>
